[package]
name = "varjostin"
version = "0.1.0"
authors = ["Aarni Koskela <akx@iki.fi>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30", default-features = false, features = [
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "default_fonts",
    #"persistence", # Enable restoring app state when restarting the app.
    #"wayland", # To support Linux (and CI)
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
glsl = "7.0.0"
eyre = "0.6.12"
clap = { version = "4.5.26", features = ["derive", "env"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
